RbA Build/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Apply_to_All_Sashes_Glass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to apply Sash 1&apos;s glass configuration to all other sashes on the product.</description>
        <inlineHelpText>Check if you want to apply Sash 1&apos;s glass configuration to all other sashes on the product.</inlineHelpText>
        <label>Apply to All Sashes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_to_All_Sashes_Grilles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to apply Sash 1&apos;s grille configuration to all other sashes on the product.</description>
        <inlineHelpText>Check if you want to apply Sash 1&apos;s grille configuration to all other sashes on the product.</inlineHelpText>
        <label>Apply to All Sashes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astragal__c</fullName>
        <description>The Astragal Color selected for the product.</description>
        <inlineHelpText>The Astragal Color selected for the product.</inlineHelpText>
        <label>Astragal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Amount__c</fullName>
        <label>Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Breather_Tubes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Breather Tubes are needed.</description>
        <inlineHelpText>Checked if Breather Tubes are needed.</inlineHelpText>
        <label>Breather Tubes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brickmould_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if brickmould should be applied to this product.</description>
        <inlineHelpText>Checked if brickmould should be applied to this product.</inlineHelpText>
        <label>Brickmould Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brickmould_Location__c</fullName>
        <description>The Brickmould Location selected for the product.</description>
        <inlineHelpText>The Brickmould Location selected for the product.</inlineHelpText>
        <label>Brickmould Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>The date the order product was cancelled.</description>
        <inlineHelpText>The date the order product was cancelled.</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to cancel the Order Product.</description>
        <inlineHelpText>Check if you want to cancel the Order Product.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who cancelled the order product.</description>
        <inlineHelpText>The user who cancelled the order product.</inlineHelpText>
        <label>Cancelled by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Casing_Location__c</fullName>
        <description>The Casing Location selected for the product.</description>
        <inlineHelpText>The Casing Location selected for the product.</inlineHelpText>
        <label>Casing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casing_Profile__c</fullName>
        <description>The Casing Profile selected for the product.</description>
        <inlineHelpText>The Casing Profile selected for the product.</inlineHelpText>
        <label>Casing Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casing_Species__c</fullName>
        <description>The Casing Species selected for the product.</description>
        <inlineHelpText>The Casing Species selected for the product.</inlineHelpText>
        <label>Casing Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Cost_To__c</fullName>
        <label>Charge Cost To:</label>
        <picklist>
            <picklistValues>
                <fullName>Manufacturer - Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local - Remake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Replace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checkrail_Style__c</fullName>
        <description>The checkrail style applied to this product.</description>
        <inlineHelpText>The checkrail style applied to this product.</inlineHelpText>
        <label>Checkrail Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High_S1__c</fullName>
        <description>Select the number of grille lites high for colonial grille pattern on sash 1.</description>
        <inlineHelpText>Select the number of grille lites high for colonial grille pattern on sash 1.</inlineHelpText>
        <label>Colonial Grille Lites High S1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High_S2__c</fullName>
        <description>Select the number of grille lites high for colonial grille pattern on sash 2</description>
        <inlineHelpText>Select the number of grille lites high for colonial grille pattern on sash 2.</inlineHelpText>
        <label>Colonial Grille Lites High S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High_S3__c</fullName>
        <description>Select the number of grille lites high for colonial grille pattern on sash 3.</description>
        <inlineHelpText>Select the number of grille lites high for colonial grille pattern on sash 3.</inlineHelpText>
        <label>Colonial Grille Lites High S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide_S1__c</fullName>
        <description>Select the number of grille lites wide for colonial grille pattern on sash 1.</description>
        <inlineHelpText>Select the number of grille lites wide for colonial grille pattern on sash 1.</inlineHelpText>
        <label>Colonial Grille Lites Wide S1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide_S2__c</fullName>
        <description>Select the number of grille lites wide for colonial grille pattern on sash 2.</description>
        <inlineHelpText>Select the number of grille lites wide for colonial grille pattern on sash 2.</inlineHelpText>
        <label>Colonial Grille Lites Wide S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide_S3__c</fullName>
        <description>Select the number of grille lites wide for colonial grille pattern on sash 3.</description>
        <inlineHelpText>Select the number of grille lites wide for colonial grille pattern on sash 3.</inlineHelpText>
        <label>Colonial Grille Lites Wide S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <description>IF(  ISPICKVAL(Order.Status, &apos;Activated&apos;)  ,  Quantity * UnitPrice , 0)</description>
        <formula>Quantity * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Due__c</fullName>
        <formula>Commission_Amount__c - Commission_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <label>Commission Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corrosion_Resistant_Hardware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this corrosion resistant hardware option has been applied to this product.</description>
        <inlineHelpText>Checked if this corrosion resistant hardware option has been applied to this product.</inlineHelpText>
        <label>Corrosion Resistant Hardware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_S1__c</fullName>
        <description>Enter details describing the custom grille sold for sash 1.</description>
        <inlineHelpText>Enter details describing the custom grille sold for sash 1.</inlineHelpText>
        <label>Custom Grille Details S1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_S2__c</fullName>
        <description>Enter details describing the custom grille sold for sash 2.</description>
        <inlineHelpText>Enter details describing the custom grille sold for sash 2.</inlineHelpText>
        <label>Custom Grille Details S2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_S3__c</fullName>
        <description>Enter details describing the custom grille sold for sash 3.</description>
        <inlineHelpText>Enter details describing the custom grille sold for sash 3.</inlineHelpText>
        <label>Custom Grille Details S3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Code__c</fullName>
        <label>Defect Code</label>
        <picklist>
            <picklistValues>
                <fullName>Bowed/Warped/Twisted/Bent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color/Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillet Bead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gouged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Operating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imperfection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M &amp; T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEED TO ADD ADDTIONAL VALUES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Line_Number__c</fullName>
        <description>The detail line number of the Order Product.</description>
        <inlineHelpText>The detail line number of the Order Product.</inlineHelpText>
        <label>Detail Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail_Line_Process_Date__c</fullName>
        <description>The process date of the detail line.</description>
        <inlineHelpText>The process date of the detail line.</inlineHelpText>
        <label>Detail Line Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>The discount (in currency) applied to the purchase order (used for AROs)</description>
        <inlineHelpText>The discount (in currency) applied to the purchase order (used for AROs).</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drip_Cap_Pieces__c</fullName>
        <description>The Drip Cap Pieces selected for the product.</description>
        <inlineHelpText>The Drip Cap Pieces selected for the product.</inlineHelpText>
        <label>Drip Cap Pieces</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dwelling_Room__c</fullName>
        <label>Dwelling Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Color__c</fullName>
        <description>The EJ Color selected for the product.</description>
        <inlineHelpText>The EJ Color selected for the product.</inlineHelpText>
        <label>EJ Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Frame__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if an EJ Kerf / Full Frame Addition of L&amp;M and PM is needed.</description>
        <inlineHelpText>Checked if an EJ Kerf / Full Frame Addition of L&amp;M and PM is needed.</inlineHelpText>
        <label>EJ Frame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EJ_Species__c</fullName>
        <description>The EJ Species selected for the product.</description>
        <inlineHelpText>The EJ Species selected for the product.</inlineHelpText>
        <label>EJ Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Thickness__c</fullName>
        <description>The EJ Thickness selected for the product.</description>
        <inlineHelpText>The EJ Thickness selected for the product.</inlineHelpText>
        <label>EJ Thickness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Wall_Depth__c</fullName>
        <description>The EJ Wall Depth selected for the product.</description>
        <inlineHelpText>The EJ Wall Depth selected for the product.</inlineHelpText>
        <label>EJ Wall Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entered_Price__c</fullName>
        <label>Entered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <description>The exterior color of the product</description>
        <inlineHelpText>The exterior color of the product</inlineHelpText>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Grille_Color__c</fullName>
        <description>The Exterior Grille Color selected for the product.</description>
        <inlineHelpText>The Exterior Grille Color selected for the product.</inlineHelpText>
        <label>Exterior Grille Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim_Color__c</fullName>
        <description>The Exterior Trim Color selected for the product.</description>
        <inlineHelpText>The Exterior Trim Color selected for the product.</inlineHelpText>
        <label>Exterior Trim Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim__c</fullName>
        <description>The exterior trim option applied to this product.</description>
        <inlineHelpText>The exterior trim option applied to this product.</inlineHelpText>
        <label>Exterior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fibrex_L_Trim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Fibrex L-Trim option is selected for this product.</description>
        <inlineHelpText>Checked if Fibrex L-Trim option is selected for this product.</inlineHelpText>
        <label>Fibrex L-Trim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finger_Lifts__c</fullName>
        <description>The number of extra finger lifts for this product.</description>
        <inlineHelpText>The number of extra finger lifts for this product.</inlineHelpText>
        <label>Finger Lifts</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Identifies the floor for this product.</description>
        <inlineHelpText>Identifies the floor for this product.</inlineHelpText>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame_Type__c</fullName>
        <description>The frame type applied to this product.</description>
        <inlineHelpText>The frame type applied to this product.</inlineHelpText>
        <label>Frame Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <description>The GL Account associated to the order line item</description>
        <inlineHelpText>The GL Account associated to the order line item</inlineHelpText>
        <label>GL Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S1__c</fullName>
        <description>Select the glass pattern for Sash 1.</description>
        <inlineHelpText>Select the glass pattern for Sash 1.</inlineHelpText>
        <label>Glass Pattern S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S2__c</fullName>
        <description>Select the glass pattern for Sash 2.</description>
        <inlineHelpText>Select the glass pattern for Sash 2.</inlineHelpText>
        <label>Glass Pattern S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S3__c</fullName>
        <description>Select the glass pattern for Sash 3.</description>
        <inlineHelpText>Select the glass pattern for Sash 3.</inlineHelpText>
        <label>Glass Pattern S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S1__c</fullName>
        <description>Select the glazing for Sash 1.</description>
        <inlineHelpText>Select the glazing for Sash 1.</inlineHelpText>
        <label>Glazing S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S2__c</fullName>
        <description>Select the glazing for Sash 2.</description>
        <inlineHelpText>Select the glazing for Sash 2.</inlineHelpText>
        <label>Glazing S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S3__c</fullName>
        <description>Select the glazing for Sash 3.</description>
        <inlineHelpText>Select the glazing for Sash 3.</inlineHelpText>
        <label>Glazing S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gliding_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gliding Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grille_Alignment__c</fullName>
        <label>Grille Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_S1__c</fullName>
        <description>Select the grille pattern for Sash 1.</description>
        <inlineHelpText>Select the grille pattern for Sash 1.</inlineHelpText>
        <label>Grille Pattern S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_S2__c</fullName>
        <description>Select the grille pattern for Sash 2.</description>
        <inlineHelpText>Select the grille pattern for Sash 2.</inlineHelpText>
        <label>Grille Pattern S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_S3__c</fullName>
        <description>Select the grille pattern for Sash 3.</description>
        <inlineHelpText>Select the grille pattern for Sash 3.</inlineHelpText>
        <label>Grille Pattern S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern__c</fullName>
        <description>The grille pattern applied to this product.</description>
        <inlineHelpText>The grille pattern applied to this product.</inlineHelpText>
        <label>Grille Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Style__c</fullName>
        <description>The grille style selected for this product.</description>
        <inlineHelpText>The grille style selected for this product.</inlineHelpText>
        <label>Grille Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handing__c</fullName>
        <description>Handing refers to the direction a window or door opens.</description>
        <inlineHelpText>Handing refers to the direction a window or door opens.</inlineHelpText>
        <label>Handing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Type__c</fullName>
        <description>The handle type selected for this product.</description>
        <inlineHelpText>The handle type selected for this product.</inlineHelpText>
        <label>Handle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Color__c</fullName>
        <description>The hardware color applied to this product.</description>
        <inlineHelpText>The hardware color applied to this product.</inlineHelpText>
        <label>Hardware Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Finish_Color__c</fullName>
        <description>The hardware finish/color applied to this product.</description>
        <inlineHelpText>The hardware finish/color applied to this product.</inlineHelpText>
        <label>Hardware Finish/Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Finish__c</fullName>
        <description>The hardware finish applied to this product.</description>
        <inlineHelpText>The hardware finish applied to this product.</inlineHelpText>
        <label>Hardware Finish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Option__c</fullName>
        <description>The hardware option selected for this product.</description>
        <inlineHelpText>The hardware option selected for this product.</inlineHelpText>
        <label>Hardware Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Style__c</fullName>
        <description>The hardware style selected for this product.</description>
        <inlineHelpText>The hardware style selected for this product.</inlineHelpText>
        <label>Hardware Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Fraction__c</fullName>
        <description>The height measurement in fractions.</description>
        <inlineHelpText>The height measurement in fractions.</inlineHelpText>
        <label>Height Fraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Inches__c</fullName>
        <description>The final height measurement in inches.</description>
        <inlineHelpText>The final height measurement in inches.</inlineHelpText>
        <label>Height_Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubs__c</fullName>
        <description>The number of hubs selected for the product.</description>
        <inlineHelpText>The number of hubs selected for the product.</inlineHelpText>
        <label>Hubs</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insect_Screen_Style__c</fullName>
        <description>The insect screen style selected for this product.</description>
        <inlineHelpText>The insect screen style selected for this product.</inlineHelpText>
        <label>Insect Screen Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Holes_Location__c</fullName>
        <description>The Install Holes Location selected for the product.</description>
        <inlineHelpText>The Install Holes Location selected for the product.</inlineHelpText>
        <label>Install Holes Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Track_Location__c</fullName>
        <description>The Install Track Location selected for the product.</description>
        <inlineHelpText>The Install Track Location selected for the product.</inlineHelpText>
        <label>Install Track Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany_AP_Account__c</fullName>
        <description>The intercompany Accounts Payable Account Number used in the financial transaction integration with Baan ERP.</description>
        <inlineHelpText>The intercompany Accounts Payable Account Number used in the financial transaction integration with Baan ERP.</inlineHelpText>
        <label>Intercompany AP Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <description>The interior color of the product.</description>
        <inlineHelpText>The interior color of the product.</inlineHelpText>
        <label>Interior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Grille_Color__c</fullName>
        <description>The Interior Grille Color selected for the product.</description>
        <inlineHelpText>The Interior Grille Color selected for the product.</inlineHelpText>
        <label>Interior Grille Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Sash_Color__c</fullName>
        <description>The Interior Sash Color selected for the product.</description>
        <inlineHelpText>The Interior Sash Color selected for the product.</inlineHelpText>
        <label>Interior Sash Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Trim__c</fullName>
        <description>The interior trim selected for the product.</description>
        <inlineHelpText>The interior trim selected for the product.</inlineHelpText>
        <label>Interior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jamb_Liner_Color__c</fullName>
        <description>The Jamb Liner Color selected for the product.</description>
        <inlineHelpText>The Jamb Liner Color selected for the product.</inlineHelpText>
        <label>Jamb Liner Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Leg_Fraction__c</fullName>
        <description>The left leg measurement fraction.</description>
        <inlineHelpText>The left leg measurement fraction.</inlineHelpText>
        <label>Left Leg Fraction</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Leg_Inches__c</fullName>
        <description>The left leg dimension in inches selected for this product.</description>
        <inlineHelpText>The left leg dimension in inches selected for this product.</inlineHelpText>
        <label>Left Leg</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifts_Pulls__c</fullName>
        <description>The number of extra lifts/pulls for this product.</description>
        <inlineHelpText>The number of extra lifts/pulls for this product.</inlineHelpText>
        <label>Lifts/Pulls</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lites_High_S1S3__c</fullName>
        <description>Select the number of grille lites high for sash 1 and sash 3.</description>
        <inlineHelpText>Select the number of grille lites high for sash 1 and sash 3.</inlineHelpText>
        <label>Lites High S1S3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_High_S2__c</fullName>
        <description>Select the number of grille lites high for sash 2.</description>
        <inlineHelpText>Select the number of grille lites high for sash 2.</inlineHelpText>
        <label>Lites High S2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_High_Wide_Total_S1S3__c</fullName>
        <formula>Lites_High_S1S3__c * Lites_Wide_S1S3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lites High Wide Total S1S3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_High_Wide_Total_S2__c</fullName>
        <formula>Lites_High_S2__c * Lites_Wide_S2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lites High Wide Total S2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_Wide_S1S3__c</fullName>
        <description>Select the number of grille lites wide for sash 1 and sash 3.</description>
        <inlineHelpText>Select the number of grille lites wide for sash 1 and sash 3.</inlineHelpText>
        <label>Lites Wide S1S3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lites_Wide_S2__c</fullName>
        <description>Select the number of grille lites wide for sash 2.</description>
        <inlineHelpText>Select the number of grille lites wide for sash 2.</inlineHelpText>
        <label>Lites Wide S2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locks_Sash__c</fullName>
        <description>The number of extra locks/sash for this product.</description>
        <inlineHelpText>The number of extra locks/sash for this product.</inlineHelpText>
        <label>Locks/Sash</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTO_Source_Code__c</fullName>
        <label>MTO Source Code</label>
        <picklist>
            <picklistValues>
                <fullName>Astraga/Interlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Grille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sash (Rails and Stiles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Grille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Window Trim/EJ/Casing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL VALUES ENTERED FROM PIVOTAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>